--- a/style.css
+++ b/style.css
@@ -42,49 +42,49 @@
 
 @-webkit-keyframes rotate {
     0%   {
-    -webkit-transform: rotate(0deg);
-       -moz-transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
-         -o-transform: rotate(0deg);
-            transform: rotate(0deg);
+    -webkit-transform: rotate(-30deg);
+       -moz-transform: rotate(-30deg);
+        -ms-transform: rotate(-30deg);
+         -o-transform: rotate(-30deg);
+            transform: rotate(-30deg);
       }
     50%  {
-    -webkit-transform: rotate(180deg);
-       -moz-transform: rotate(180deg);
-        -ms-transform: rotate(180deg);
-         -o-transform: rotate(180deg);
-            transform: rotate(180deg);
+    -webkit-transform: rotate(210deg);
+       -moz-transform: rotate(210deg);
+        -ms-transform: rotate(210deg);
+         -o-transform: rotate(210deg);
+            transform: rotate(210deg);
       }
     100% {
-    -webkit-transform: rotate(0deg);
-       -moz-transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
-         -o-transform: rotate(0deg);
-            transform: rotate(0deg);
+    -webkit-transform: rotate(-30deg);
+       -moz-transform: rotate(-30deg);
+        -ms-transform: rotate(-30deg);
+         -o-transform: rotate(-30deg);
+            transform: rotate(-30deg);
       }
 }
 
 @keyframes rotate {
     0%   {
-    -webkit-transform: rotate(0deg);
-       -moz-transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
-         -o-transform: rotate(0deg);
-            transform: rotate(0deg);
+    -webkit-transform: rotate(-30deg);
+       -moz-transform: rotate(-30deg);
+        -ms-transform: rotate(-30deg);
+         -o-transform: rotate(-30deg);
+            transform: rotate(-30deg);
       }
     50%  {
-    -webkit-transform: rotate(90deg);
-       -moz-transform: rotate(90deg);
-        -ms-transform: rotate(90deg);
-         -o-transform: rotate(90deg);
-            transform: rotate(90deg);
+    -webkit-transform: rotate(210deg);
+       -moz-transform: rotate(210deg);
+        -ms-transform: rotate(210deg);
+         -o-transform: rotate(210deg);
+            transform: rotate(210deg);
       }
     100% {
-    -webkit-transform: rotate(0deg);
-       -moz-transform: rotate(0deg);
-        -ms-transform: rotate(0deg);
-         -o-transform: rotate(0deg);
-            transform: rotate(0deg);
+    -webkit-transform: rotate(-30deg);
+       -moz-transform: rotate(-30deg);
+        -ms-transform: rotate(-30deg);
+         -o-transform: rotate(-30deg);
+            transform: rotate(-30deg);
       }
 }
 
@@ -96,9 +96,11 @@
   display: inline-block;
   width: 360px;
   height: 360px;
-  -webkit-border-radius: 50%;
-          border-radius: 50%;
+  /*-webkit-border-radius: 50%;
+          border-radius: 50%;*/
   border: 1px solid #f0f;
+
+  /*transform: rotate(30deg);*/
 }
 
 .dot {
@@ -108,3 +110,10 @@
   height: 2px;
   background: #000;
 }
+
+.dot.special {
+  width: 20px;
+  height: 20px;
+  background: #f00;
+}
+
