--- a/style.css
+++ b/style.css
@@ -111,29 +111,27 @@
 
 .special-dot {
   background: transparent;
-  /*width: 20px;
-  height: 20px;*/
+  width: 20px;
+  height: 2px;
   /*width: auto;*/
-  height: 15px;
+  /*height:auto;*/
   background: #f00;
   /*line-height: 0;*/
   text-align: center;
-  max-width: 200px;
   font-family: Tahoma, Geneva, sans-serif;
   font-size: 15px;
   color: #666;
+  -webkit-transform-origin: center left;
+     -moz-transform-origin: center left;
+      -ms-transform-origin: center left;
+       -o-transform-origin: center left;
+          transform-origin: center left;
 }
 
-#test {
-  /*-webkit-transform-origin: right center;
-     -moz-transform-origin: right center;
-      -ms-transform-origin: right center;
-       -o-transform-origin: right center;
-          transform-origin: right center;*/
-    -webkit-animation-name: rotate;
-    -webkit-animation-duration: 4s;
-    -webkit-animation-iteration-count: infinite;
-    animation-name: rotate;
-    animation-duration: 4s;
-    animation-iteration-count: infinite;
+.value {
+  position: absolute;
+  left: 30px;
+  top: 0px;
+  background: #ff0;
 }
+
