--- a/style.css
+++ b/style.css
@@ -37,12 +37,12 @@
   left: 0px;
   top: 0px;
   position: absolute;
-  -webkit-animation-name: rotate;
-  -webkit-animation-duration: 4s;
+  /*-webkit-animation-name: rotate;*/
+  /*-webkit-animation-duration: 4s;*/
   /*-webkit-animation-iteration-count: infinite;*/
   animation-name: rotate;
   animation-duration: 4s;
-  /*animation-iteration-count: infinite;*/
+  animation-iteration-count: infinite;
 }
 
 @-webkit-keyframes rotate {
